# dg_hardware

./: CMakeLists.txt  README.md  delto_hardware.xml  package.xml
include/delto_hardware/: delto_gripper_helper.hpp  system_interface.hpp
src/: system_interface.cpp
