<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delto_hardware</name>
  <version>1.0.0</version>
  <description>Unified hardware interface for all Delto gripper models (DG3F-B, DG3F-M, DG4F, DG5F)</description>
  <maintainer email="support@tesollo.com">TESOLLO</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>delto_tcp_comm</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
